@@ -4,6 +4,7 @@ sensord (0.6.42) unstable; urgency=low
   * Sensor graph shrinking not supported anymore to prevent race conditions between adaptor threads and qt mainloop. Fixes: NB#242237
   * Implemented downsample filter for XYZ data.
   * RotationFilter won't propagate data for compass input. Fixes: NB#242233.
+  * TapAdaptor won't try to configure pollrate for accelerometer driver anymore. Fixes: NB#242902.
 
  -- Antti Virtanen <antti.i.virtanen@nokia.com>  Fri, 01 Apr 2011 11:48:34 +0200
 
